# local-document-search

./: .env.example  .gitignore  README.md  README1.md  config.py  pyproject.toml  requirements.txt  run.py  start.bat  start.sh  temp_drop_documents.py  temp_drop_table.py
app/: __init__.py  i18n.py  models.py
app/routes/: cleanup.py  convert.py  main.py  search.py  wechat.py
app/services/: cleanup_service.py  converter.py  converters.py  doc_converter.py  drawio_converter.py  file_scanner.py  filesystem_scanner.py  image_converter.py  ingest.py  ingestion_manager.py  openai_adapter.py  ppt_converter.py  provider_factory.py  search_service.py  video_converter.py  wechat_service.py  xmind_converter.py
app/templates/: base.html  cleanup.html  convert.html  errors.html  search.html  wechat_articles.html  wechat_management.html
app/utils/: file_utils.py
docs/: EULA.md
logs/: app.log.10
migrations/versions/: 0c8740bb4663_add_wechatlist_and_wechatarticlelist_.py  0d52e52b69ab_initial_migration.py  28f5b70f7022_add_ingeststate_table_and_source_fields_.py  a1b2c3d4e5f6_enable_pg_trgm_extension.py  b2c3d4e5f6a7_add_gin_index_for_trigram_search.py  d02107b4f136_initial_migration_with_final_schema.py
scripts/: CHECK_ENVIRONMENT_SUMMARY.md  README_SCRIPTS.md  check_environment.py  e2e_smoke.py  exportDrawioToMD.py  import_joplin.py  init_db.py  markitdown_gemini_example.py  migrate_html_conversion_type.sql  reindex_fts.py  reprocess_html.py  show_effective_prompt.py  start_services.py  test_image_converter.py  test_joplin_api.py  wechat_api_response.json
src/local_document_search/: __init__.py  app.py  cli.py  config.py  models.py
tests/: __init__.py  conftest.py  test_conversion_type_filter.py  test_drawio_convert.py  test_file_types_api.py  test_html_conversion_type.py  test_provider_fallback.py  test_registry_and_retry.py  test_video_convert.py  test_wechat_direct_ingest.py  test_xmind_convert.py
(+29 files in other folders)
